--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ body {
 
 /* Make syntax highlighter responsive */
 pre {
+  background-color: #1e1e1e;
   white-space: pre-wrap;       /* Since CSS 2.1 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
   white-space: -pre-wrap;      /* Opera 4-6 */
